-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 6u18
-
Component/s: client-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2186297 | 6u19 | Abhijit Saha | P2 | Resolved | Fixed | b01 |
When a frame displaying security warning icon loses focus the security warning icon's color turns bright yellow (as if the frame has focus)
and then fades away. This is reproducible on 6u18 on windows xp.
But in 6u14 , when the frame loses focus, the security warning just fades away.
To reproduce:
1. Run TopLevelFactory.jar
2. Click on Display Security Warning checkbox
3. Click button "Show toplevel"
4. Move the mouse on the window and then move the mouse outside the window such that the window loses focus
In 6u18, the security warning icon becomes more bright before fading off.
Please provide pointer to TopLevelFactory.jar OR attach it.
and then fades away. This is reproducible on 6u18 on windows xp.
But in 6u14 , when the frame loses focus, the security warning just fades away.
To reproduce:
1. Run TopLevelFactory.jar
2. Click on Display Security Warning checkbox
3. Click button "Show toplevel"
4. Move the mouse on the window and then move the mouse outside the window such that the window loses focus
In 6u18, the security warning icon becomes more bright before fading off.
Please provide pointer to TopLevelFactory.jar OR attach it.
- backported by
-
JDK-2186297 Security Warning Icon not getting displayed properly when frame loses focus
-
- Resolved
-