6901021: Security Warning Icon not getting displayed properly when frame loses focus

Make sure the gray icon is selected when hiding the security warning

Reviewed-by: art, dcherepanov